<resources>
    <string name="app_name">Accounting Book</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add">Add Entry</string>

    <string name="test_add_activity">This is add activity.</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="description">Description</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="save">Save</string>

    <string name="expense">Expense</string>
    <string name="income">Income</string>

    <string name="overview">Overview</string>
    <string name="details">Details</string>

    <string name="balance">Balance</string>
</resources>
