<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.group15.accountingbook.AddActivity">

    <EditText android:id="@+id/edit_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:singleLine="true" />

    <RadioGroup android:id="@+id/radio_group_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:layout_below="@id/edit_description" >
        <RadioButton android:id="@+id/radio_expense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expense" />
        <RadioButton android:id="@+id/radio_income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/income" />
    </RadioGroup>

    <TextView android:id="@+id/dollar_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$"
        android:padding="6dp"
        android:textSize="18sp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/radio_group_type" />

    <EditText android:id="@+id/edit_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/amount"
        android:inputType="numberDecimal"
        android:layout_below="@id/radio_group_type"
        android:layout_toRightOf="@id/dollar_sign" />

    <Button android:id="@+id/edit_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_amount"
        android:hint="@string/date"
        android:padding="8dp"
        android:textSize="18sp"
        android:background="?android:attr/selectableItemBackground"
        android:onClick="showDatePickerDialog" />

</RelativeLayout>
